--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:spring-mybatis.xml,classpath:spring-mvc.xml</param-value>
+    <param-value>classpath:spring_config/spring-mybatis.xml,classpath:spring_config/spring-mvc.xml</param-value>
   </context-param>
   <filter>
     <filter-name>encodingFilter</filter-name>
@@ -28,7 +28,7 @@
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
       <param-name>contextConfigLocation</param-name>
-      <param-value>classpath:spring-mvc.xml,classpath:spring-mybatis.xml</param-value>
+      <param-value>classpath:spring_config/spring-mvc.xml,classpath:spring_config/spring-mybatis.xml</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
     <async-supported>true</async-supported>
