--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -101,6 +101,10 @@
       <param-name>serverName</param-name>
       <param-value>http://127.0.0.1:8080</param-value>
     </init-param>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
   </filter>
   <filter-mapping>
     <filter-name>CASFilter</filter-name>
@@ -127,6 +131,11 @@
     <init-param>
       <param-name>sslConfigFile</param-name>
       <param-value>E:\ssl\sslconf.properties</param-value>
+    </init-param>
+    <!--设置编码 -->
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
     </init-param>
   </filter>
   <filter-mapping>
