设置cas编码，添加重新申请对应的aop历史记录接口

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -128,6 +128,12 @@
       <param-name>sslConfigFile</param-name>
       <param-value>E:\ssl\sslconf.properties</param-value>
     </init-param>
+    <!-- 编码配置 -->
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+
   </filter>
   <filter-mapping>
     <filter-name>CASValidationFilter</filter-name>
