--- a/src/resources/jdbc.properties
+++ b/src/resources/jdbc.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/workload?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 username=root
-password=
+password=smzxcxl5201314
 initialPoolSize=1
 maxPoolSize=20
 maxIdleTime=20
